k8-5/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replices: 1
  selector:
    matchlabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
  spec:
    volumes:
    - name: postgres-storage
    PresistentVolumeClaim:
      ClaimName: database-Presistent-Volume-Claim
    container:
    - name: postgres
      images: postgres:12-alpine
      ports:
        -  containerPort: 5432
      volumeMounts:
      - name: postgres-storage
        mountPath: /var/lib/postgresql/data
        subPath: postgres
