k8-5/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment

spec:
  replicas: 1
  selector: 
    matchLabels:
      component: radis
  template:
    metadata:
      labels:
        component: radis
    spec:
      containers: 
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
