k8-5/web-deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: wishlist-app
  template:
    metadata:
      labels: 
        component: wishlist-app
    spec:
      containers:
      - name: wishlist-app-container
        image: tharun13055/user-wishlist-k8s:v1
        ports:
        - containerPort: 80
