k8-5/postgres-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: my-service
spec:
  selector:
    component: postgres
  type: ClusterIP
  ports: 
  -  port: 5432
     targetPort: 5432
