k8-5/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    component: radis
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
