k8-5/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    component: wishlist-app
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
