k8-5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: wishlist-app-ingress
spec:
  rules:
  -  http:
       paths:
       -  path: /
          pathType: Prefix
          backend:
            service:
              name: my-service
              port:
                number: 80
